fix layout issues

--- a/app/assets/stylesheets/frontend/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/frontend/bootstrap_and_overrides.css.less
@@ -13,6 +13,9 @@
   min-width: 768px;
   margin: 65px auto 0;
 }
+.container-fluid {
+  padding: 0;
+}
 
 a {
   outline: 0 none;
